<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wanderful</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="main_schedule">Main Schedule</string>
    <string name="event_details">Event Details</string>
    <string name="my_schedule">My Schedule</string>
    <string name="map">Map</string>
    <string name="hash_feed">Hash Feed</string>
    <string name="title_activity_main_schedule">MainSchedule</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_my_schedule">MySchedule</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_hash_feed">HashFeed</string>
    <string name="addButton">Add</string>
    <string name="deleteButton">Delete</string>
    <string name="enter">Enter</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>
    <string name="title_event_list">Events</string>
    <string name="title_event_detail">Event Detail</string>
    <string name="search">Search</string>
    <string name="sort_day">Sort by Day</string>
    <string name="sort_stage">Sort by Stage</string>
    <string name="time">Time</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="genre">Genre</string>
    <string name="description">Description</string>
    <string name="about">About Wanderful</string>
    <string name="version">Version 1.0</string>
    <string name="author">Author</string>
    <string name="authors">Gang of Four</string>
    <string name="savedEvents">Saved Events</string>
    <string name="festival">Festival Name</string>
    <string name="numofperformances"># of Saved Performances</string>

    <string-array name="time">
        <item>9:00</item>
        <item>10:00</item>
        <item>11:00</item>
    </string-array>
    <string-array name="names">
        <item>Band A</item>
        <item>Band B</item>
        <item>Band C</item>
    </string-array>

    <string name="title_activity_youtube">YoutubeActivity</string>
    <string name="settings">Settings</string>

</resources>