<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/performerimagebig"
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/map"
            android:padding="@dimen/detail_padding"
            android:scaleType="fitXY" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="@dimen/detail_padding"
                android:paddingTop="@dimen/detail_padding"
                android:text="@string/name"
                android:textSize="@dimen/detail_name" />

            <Button
                android:id="@+id/addbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:focusable="false"
                android:minHeight="0dp"
                android:textSize="@dimen/detail_description"
                android:text="@string/addButton" />
        </LinearLayout>

        <TextView
            android:id="@+id/time"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="@dimen/detail_padding"
            android:text="@string/time"
            android:textSize="@dimen/detail_information" />

        <TextView
            android:id="@+id/location"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="@dimen/detail_padding"
            android:text="@string/location"
            android:textSize="@dimen/detail_information" />

        <TextView
            android:id="@+id/genre"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:paddingLeft="@dimen/detail_padding"
            android:text="@string/genre"
            android:textSize="@dimen/detail_information" />

        <TextView
            android:id="@+id/description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="@dimen/detail_padding"
            android:text="@string/description"
            android:textSize="@dimen/detail_description" />
    </LinearLayout>

</ScrollView>