<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:baselineAligned="false"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/settings_padding" >

        <TextView
            android:id="@+id/about"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/version"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/settings_padding" >

        <TextView
            android:id="@+id/author"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/authors"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/authors"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/settings_padding" >

        <TextView
            android:id="@+id/savedEvents"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/savedEvents"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/evenName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/festival"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/numOfPerformancesSaved"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/numofperformances"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ListView
            android:id="@+id/savedlistview"
            style="@style/dividedListStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.86" >
        </ListView>
    </LinearLayout>

</LinearLayout>