<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainSchedule" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/main_schedule"
        android:textSize="@dimen/header" />

   <android.support.v4.view.ViewPager
    android:id="@+id/pager"
    android:layout_weight="1"
    android:layout_width="match_parent"
    android:layout_height="0px">    
</android.support.v4.view.ViewPager>

    <LinearLayout
        style="@android:style/ButtonBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/home_btn"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/home"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/main_schedule_btn"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/black"
            android:text="@string/main_schedule"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/my_schedule_btn"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/my_schedule"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/hash_feed_btn"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/hash_feed"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/map_btn"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/map"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text" />
    </LinearLayout>

</LinearLayout>