<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wanderfulbackground"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/performance_detail_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white"
        tools:context=".DetailFragment"
        tools:ignore="MergeRootFrame" />

    <LinearLayout
        style="@android:style/ButtonBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/home_btn"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/black"
            android:src="@drawable/wanderfulhome"
            android:text="@string/home"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text" />

        <ImageButton
            android:id="@+id/main_schedule_btn"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/black"
            android:src="@drawable/wanderfulschedule"
            android:text="@string/main_schedule"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text" />

        <ImageButton
            android:id="@+id/my_schedule_btn"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/black"
            android:src="@drawable/wanderfulbookmarks"
            android:text="@string/my_schedule"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text" />

        <ImageButton
            android:id="@+id/hash_feed_btn"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/black"
            android:src="@drawable/wanderfulhash"
            android:text="@string/hash_feed"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text" />

        <ImageButton
            android:id="@+id/map_btn"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/black"
            android:src="@drawable/wanderfulmap"
            android:text="@string/map"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text" />
    </LinearLayout>

</LinearLayout>