<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wanderfulbackground"
    android:orientation="vertical"
    tools:context=".SearchPage" >

    <EditText
        android:id="@+id/searchfiltertext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_gravity="center"
        android:hint="let me search!!!" />

    <ListView
        android:id="@+id/searchlistview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/searchfiltertext"
        android:layout_weight="1" >
    </ListView>
<LinearLayout
        style="@android:style/ButtonBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/home_btn"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/black"
            android:src="@drawable/homeselect"
            android:text="@string/home"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text" />

        <ImageButton
            android:id="@+id/main_schedule_btn"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/black"
            android:src="@drawable/schedule"
            android:text="@string/main_schedule"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text" />

        <ImageButton
            android:id="@+id/my_schedule_btn"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/black"
            android:src="@drawable/bookmark"
            android:text="@string/my_schedule"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text" />

        <ImageButton
            android:id="@+id/hash_feed_btn"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/black"
            android:src="@drawable/social"
            android:text="@string/hash_feed"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text" />

        <ImageButton
            android:id="@+id/map_btn"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/black"
            android:src="@drawable/map"
            android:text="@string/map"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text" />
    </LinearLayout>
    
</LinearLayout>

