<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wanderfulbackground"
    android:orientation="vertical"
    tools:context=".HashFeed" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:stretchColumns="1" >

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/header" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </TextView>

        <TextView
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        style="@android:style/ButtonBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/detail_padding"
        android:paddingTop="@dimen/zero" >

        <ImageButton
            android:id="@+id/home_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/black"
            android:src="@drawable/home"
            android:text="@string/home"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text" />

        <ImageButton
            android:id="@+id/main_schedule_btn"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/black"
            android:src="@drawable/schedule"
            android:text="@string/main_schedule"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text" />

        <ImageButton
            android:id="@+id/my_schedule_btn"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/black"
            android:src="@drawable/bookmark"
            android:text="@string/my_schedule"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text" />

        <ImageButton
            android:id="@+id/hash_feed_btn"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/black"
            android:src="@drawable/socialselect"
            android:text="@string/hash_feed"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text" />

        <ImageButton
            android:id="@+id/map_btn"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:adjustViewBounds="false"
            android:background="@color/black"
            android:cropToPadding="false"
            android:padding="@dimen/zero"
            android:src="@drawable/map"
            android:text="@string/map"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text" />

    </LinearLayout>
</LinearLayout>